crates/penrose_proc/tests/stub/meta-args-reject-correctly.stderr
error: Expected `prefix = "Foo"` or `test_only = "true" | "false"`
  --> $DIR/meta-args-reject-correctly.rs:12:27
   |
12 | #[stubbed_companion_trait(bork = "CustomPrefix")]
   |                           ^^^^^^^^^^^^^^^^^^^^^
